--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 #
 # Binaries for programs and plugins
 *.exe
-blink
 *.exe~
 *.dll
 *.so
 *.dylib
+*.bin
 
 # Test binary, built with `go test -c`
 *.test
@@ -20,3 +20,4 @@ blink
 
 # Go workspace file
 go.work
+.idea/**
